Everything on a consistent format now

--- a/student_materials/session5_fitting_models_in_r/session5_fitting_models_in_r.html
+++ b/student_materials/session5_fitting_models_in_r/session5_fitting_models_in_r.html
@@ -260,8 +260,8 @@ window.Quarto = {
 
 <header id="title-block-header">
 
+<p class="subtitle lead">SPARKLE short course ‘Mathematical Modelling of Infectious Diseases’</p>
 
-<p class="date">March 2023</p>
 </header>
 
 
