Add descriptions to listing page

--- a/student_materials/index.html
+++ b/student_materials/index.html
@@ -4291,7 +4291,7 @@ display: inherit;
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-listing-file-modified-sort="1752737834802" data-listing-reading-time-sort="13" data-listing-word-count-sort="2502">
+<div class="quarto-post image-right" data-index="0" data-listing-file-modified-sort="1752738311160" data-listing-reading-time-sort="13" data-listing-word-count-sort="2435">
 <div class="thumbnail"><a href="./session1_intro_to_mathematical_modelling/session1_intro_to_mathematical_modelling.html" class="no-external">
 
 <p class="card-img-top"><img src="session1_intro_to_mathematical_modelling/real_world.png"  class="thumbnail-image card-img"/></p>
@@ -4305,7 +4305,7 @@ display: inherit;
 <a href="./session1_intro_to_mathematical_modelling/session1_intro_to_mathematical_modelling.html" class="no-external">SPARKLE short course ‘Mathematical Modelling of Infectious Diseases’</a>
 </div>
 <div class="delink listing-description"><a href="./session1_intro_to_mathematical_modelling/session1_intro_to_mathematical_modelling.html" class="no-external">
-SPARKLE short course ‘Mathematical Modelling of Infectious Diseases’
+<p>The basic concepts of mathematical modelling of infectious diseases.</p>
 </a></div>
 </div>
 <div class="metadata">
@@ -4313,7 +4313,7 @@ SPARKLE short course ‘Mathematical Modelling of Infectious Diseases’
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="1" data-listing-file-modified-sort="1752737830232" data-listing-reading-time-sort="20" data-listing-word-count-sort="3835">
+<div class="quarto-post image-right" data-index="1" data-listing-file-modified-sort="1752738341465" data-listing-reading-time-sort="20" data-listing-word-count-sort="3834">
 <div class="thumbnail"><a href="./session2_differential_equations_in_r/session2_differential_equations_in_r.html" class="no-external">
 
 <p class="card-img-top"><img src="session2_differential_equations_in_r/session2_differential_equations_in_r_files/figure-html/de-growth-visualise-1.png"  class="thumbnail-image card-img"/></p>
@@ -4327,7 +4327,7 @@ SPARKLE short course ‘Mathematical Modelling of Infectious Diseases’
 <a href="./session2_differential_equations_in_r/session2_differential_equations_in_r.html" class="no-external">SPARKLE short course ‘Mathematical Modelling of Infectious Diseases’</a>
 </div>
 <div class="delink listing-description"><a href="./session2_differential_equations_in_r/session2_differential_equations_in_r.html" class="no-external">
-SPARKLE short course ‘Mathematical Modelling of Infectious Diseases’
+<p>Solving ordinary differential equations in R</p>
 </a></div>
 </div>
 <div class="metadata">
@@ -4335,7 +4335,7 @@ SPARKLE short course ‘Mathematical Modelling of Infectious Diseases’
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="2" data-listing-file-modified-sort="1752737826141" data-listing-reading-time-sort="3" data-listing-word-count-sort="477">
+<div class="quarto-post image-right" data-index="2" data-listing-file-modified-sort="1752738351682" data-listing-reading-time-sort="3" data-listing-word-count-sort="477">
 <div class="thumbnail"><a href="./session3_writing_a_model_to_suit_the_infectious_agent/session3_writing_a_model_to_suit_the_infectious_agent.html" class="no-external">
 
 <p class="card-img-top"><img src="session3_writing_a_model_to_suit_the_infectious_agent/HIV.png"  class="thumbnail-image card-img"/></p>
@@ -4349,7 +4349,7 @@ SPARKLE short course ‘Mathematical Modelling of Infectious Diseases’
 <a href="./session3_writing_a_model_to_suit_the_infectious_agent/session3_writing_a_model_to_suit_the_infectious_agent.html" class="no-external">SPARKLE short course ‘Mathematical Modelling of Infectious Diseases’</a>
 </div>
 <div class="delink listing-description"><a href="./session3_writing_a_model_to_suit_the_infectious_agent/session3_writing_a_model_to_suit_the_infectious_agent.html" class="no-external">
-SPARKLE short course ‘Mathematical Modelling of Infectious Diseases’
+<p>Practice in building a model</p>
 </a></div>
 </div>
 <div class="metadata">
@@ -4357,7 +4357,7 @@ SPARKLE short course ‘Mathematical Modelling of Infectious Diseases’
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="3" data-listing-file-modified-sort="1752737820765" data-listing-reading-time-sort="12" data-listing-word-count-sort="2327">
+<div class="quarto-post image-right" data-index="3" data-listing-file-modified-sort="1752738401810" data-listing-reading-time-sort="12" data-listing-word-count-sort="2327">
 <div class="thumbnail"><a href="./session4_covid_thailand_seir_model/session4_covid_thailand_seir_model.html" class="no-external">
 
 <p class="card-img-top"><img src="session4_covid_thailand_seir_model/session4_covid_thailand_seir_model_files/figure-html/load-data-1.png"  class="thumbnail-image card-img"/></p>
@@ -4371,7 +4371,7 @@ SPARKLE short course ‘Mathematical Modelling of Infectious Diseases’
 <a href="./session4_covid_thailand_seir_model/session4_covid_thailand_seir_model.html" class="no-external">SPARKLE short course ‘Mathematical Modelling of Infectious Diseases’</a>
 </div>
 <div class="delink listing-description"><a href="./session4_covid_thailand_seir_model/session4_covid_thailand_seir_model.html" class="no-external">
-SPARKLE short course ‘Mathematical Modelling of Infectious Diseases’
+<p>Write a disease model and compare it to data</p>
 </a></div>
 </div>
 <div class="metadata">
@@ -4379,7 +4379,7 @@ SPARKLE short course ‘Mathematical Modelling of Infectious Diseases’
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="4" data-listing-file-modified-sort="1752737739707" data-listing-reading-time-sort="30" data-listing-word-count-sort="5850">
+<div class="quarto-post image-right" data-index="4" data-listing-file-modified-sort="1752738412895" data-listing-reading-time-sort="30" data-listing-word-count-sort="5850">
 <div class="thumbnail"><a href="./session5_fitting_models_in_r/session5_fitting_models_in_r.html" class="no-external">
 
 <p class="card-img-top"><img src="session5_fitting_models_in_r/session5_fitting_models_in_r_files/figure-html/load-data-1.png"  class="thumbnail-image card-img"/></p>
@@ -4393,7 +4393,7 @@ SPARKLE short course ‘Mathematical Modelling of Infectious Diseases’
 <a href="./session5_fitting_models_in_r/session5_fitting_models_in_r.html" class="no-external">SPARKLE short course ‘Mathematical Modelling of Infectious Diseases’</a>
 </div>
 <div class="delink listing-description"><a href="./session5_fitting_models_in_r/session5_fitting_models_in_r.html" class="no-external">
-SPARKLE short course ‘Mathematical Modelling of Infectious Diseases’
+<p>Take your model and formally fit it on data</p>
 </a></div>
 </div>
 <div class="metadata">
@@ -4401,7 +4401,7 @@ SPARKLE short course ‘Mathematical Modelling of Infectious Diseases’
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="5" data-listing-file-modified-sort="1752737765815" data-listing-reading-time-sort="31" data-listing-word-count-sort="6066">
+<div class="quarto-post image-right" data-index="5" data-listing-file-modified-sort="1752738427552" data-listing-reading-time-sort="31" data-listing-word-count-sort="6046">
 <div class="thumbnail"><a href="./session7_vector_borne_modelling/session7_vector_borne_modelling.html" class="no-external">
 
 <p class="card-img-top"><img src="session7_vector_borne_modelling/mosquito.jpg" alt="Mosquito biting"  class="thumbnail-image card-img"/></p>
@@ -4415,7 +4415,7 @@ SPARKLE short course ‘Mathematical Modelling of Infectious Diseases’
 <a href="./session7_vector_borne_modelling/session7_vector_borne_modelling.html" class="no-external">SPARKLE short course ‘Mathematical Modelling of Infectious Diseases’</a>
 </div>
 <div class="delink listing-description"><a href="./session7_vector_borne_modelling/session7_vector_borne_modelling.html" class="no-external">
-SPARKLE short course ‘Mathematical Modelling of Infectious Diseases’
+<p>Introduction to modelling vector-borne disease models</p>
 </a></div>
 </div>
 <div class="metadata">
@@ -4423,7 +4423,7 @@ SPARKLE short course ‘Mathematical Modelling of Infectious Diseases’
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="6" data-listing-file-modified-sort="1752737808770" data-listing-reading-time-sort="61" data-listing-word-count-sort="12121">
+<div class="quarto-post image-right" data-index="6" data-listing-file-modified-sort="1752738438125" data-listing-reading-time-sort="61" data-listing-word-count-sort="12121">
 <div class="thumbnail"><a href="./session8_vector_borne_modelling_in_r/session8_vector_borne_modelling_in_r.html" class="no-external">
 
 <p class="card-img-top"><img src="session8_vector_borne_modelling_in_r/session8_vector_borne_modelling_in_r_files/figure-html/run_model-1.png"  class="thumbnail-image card-img"/></p>
@@ -4437,7 +4437,7 @@ SPARKLE short course ‘Mathematical Modelling of Infectious Diseases’
 <a href="./session8_vector_borne_modelling_in_r/session8_vector_borne_modelling_in_r.html" class="no-external">SPARKLE short course ‘Mathematical Modelling of Infectious Diseases’</a>
 </div>
 <div class="delink listing-description"><a href="./session8_vector_borne_modelling_in_r/session8_vector_borne_modelling_in_r.html" class="no-external">
-SPARKLE short course ‘Mathematical Modelling of Infectious Diseases’
+<p>Extend your vector-born disease models</p>
 </a></div>
 </div>
 <div class="metadata">
@@ -4445,7 +4445,7 @@ SPARKLE short course ‘Mathematical Modelling of Infectious Diseases’
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="7" data-listing-file-modified-sort="1752737804898" data-listing-reading-time-sort="22" data-listing-word-count-sort="4359">
+<div class="quarto-post image-right" data-index="7" data-listing-file-modified-sort="1752738449006" data-listing-reading-time-sort="22" data-listing-word-count-sort="4359">
 <div class="thumbnail"><a href="./session9_modelling_interventions_in_r/session9_modelling_interventions_in_r.html" class="no-external">
 
 <p class="card-img-top"><img src="session9_modelling_interventions_in_r/Thailand_First_Wave.png"  class="thumbnail-image card-img"/></p>
@@ -4459,7 +4459,7 @@ SPARKLE short course ‘Mathematical Modelling of Infectious Diseases’
 <a href="./session9_modelling_interventions_in_r/session9_modelling_interventions_in_r.html" class="no-external">SPARKLE short course ‘Mathematical Modelling of Infectious Diseases’</a>
 </div>
 <div class="delink listing-description"><a href="./session9_modelling_interventions_in_r/session9_modelling_interventions_in_r.html" class="no-external">
-SPARKLE short course ‘Mathematical Modelling of Infectious Diseases’
+<p>Take the model of COVID and introduce interventions</p>
 </a></div>
 </div>
 <div class="metadata">
