--- a/student_materials/session1_intro_to_mathematical_modelling/session1_intro_to_mathematical_modelling.html
+++ b/student_materials/session1_intro_to_mathematical_modelling/session1_intro_to_mathematical_modelling.html
@@ -6,6 +6,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
+<meta name="description" content="The basic concepts of mathematical modelling of infectious diseases.">
 
 <title>Introduction to Mathematical Modelling – Modelling Infectious Diseases</title>
 <style>
@@ -293,13 +294,6 @@ window.Quarto = {
   <span class="emph">Presenter:</span> Emma McBryde, Australian Institute of Tropical Health &amp; Medicine, James Cook University
 </p>
 
-<p>Thanks to:</p>
-<ul>
-<li><a href="&quot;http://www.tropmedres.ac/researchers/researcher/lisa-white&quot;">Lisa White</a>, Nuffield Department of Medicine, Oxford University and</li>
-<li><a href="&quot;http://www.tropmedres.ac/wirichada-pan-ngum&quot;">Wirichada Pan-Ngum</a>, Department of Tropical Hygiene, Faculty of Tropical Medicine, Mahidol University.</li>
-</ul>
-<p>Adapted and presented by <a href="&quot;https://research.jcu.edu.au/portfolio/emma.mcbryde&quot;">Emma McBryde</a>, Australian Institute of Tropical Health &amp; Medicine, James Cook University July 2022</p>
-<p>Adapted and presented by <a href="&quot;https://research.jcu.edu.au/portfolio/roslyn.hickson/&quot;">Roslyn Hickson</a>, College of Public Health, Medical and Veterinary Sciences, and Australian Institute of Tropical Health &amp; Medicine, James Cook University (and CSIRO) March 2023</p>
 <section id="summary" class="level1">
 <h1>Summary</h1>
 <p>This is an interactive session to introduce the basic concepts of mathematical modelling of infectious diseases. The SIRS model will be derived and explained. Typical epidemiological measures such as prevalence, incidence and the basic reproduction number will be explored. Types of transmission dynamic models will be compared.</p>
