--- a/student_materials/session7_vector_borne_modelling/session7_vector_borne_modelling.html
+++ b/student_materials/session7_vector_borne_modelling/session7_vector_borne_modelling.html
@@ -6,6 +6,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
+<meta name="description" content="Introduction to modelling vector-borne disease models">
 
 <title>Building vector-borne disease models – Modelling Infectious Diseases</title>
 <style>
@@ -249,21 +250,6 @@ window.Quarto = {
   <span class="emph">Presenter:</span> Trish Campbell, The University of Melbourne at The Peter Doherty Institute for Infection and Immunity
 </p>
 
-<div class="cell" data-layout-align="center">
-<style type="text/css">
-textarea {
-    width: 100%;
-}
-
-.line-block {
-    line-height: 1.5em;
-}
-
-.line-block a {
-    font-style: italic;
-}
-</style>
-</div>
 <section id="summary" class="level1 tabset tabset-pills tabset-fade">
 <h1 class="tabset tabset-pills tabset-fade">Summary</h1>
 <p>This is an interactive session to introduce the concepts of modelling vector-borne diseases. The motivation for modelling and differences compared to modelling diseases spread by direct transmission will be covered. We will write down a basic model and derive the expression for <span class="math inline">\(\mathcal{R}_0\)</span>.</p>
