--- a/student_materials/session5_fitting_models_in_r/session5_fitting_models_in_r.html
+++ b/student_materials/session5_fitting_models_in_r/session5_fitting_models_in_r.html
@@ -6,6 +6,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
+<meta name="description" content="Take your model and formally fit it on data">
 
 <title>Fitting Models in R – Modelling Infectious Diseases</title>
 <style>
