--- a/student_materials/session8_vector_borne_modelling_in_r/session8_vector_borne_modelling_in_r.html
+++ b/student_materials/session8_vector_borne_modelling_in_r/session8_vector_borne_modelling_in_r.html
@@ -6,6 +6,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
+<meta name="description" content="Extend your vector-born disease models">
 
 <title>Vector-borne disease models in R – Modelling Infectious Diseases</title>
 <style>
