--- a/student_materials/session9_modelling_interventions_in_r/session9_modelling_interventions_in_r.html
+++ b/student_materials/session9_modelling_interventions_in_r/session9_modelling_interventions_in_r.html
@@ -6,6 +6,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
+<meta name="description" content="Take the model of COVID and introduce interventions">
 
 <title>Modelling interventions in R – Modelling Infectious Diseases</title>
 <style>
