Add optimal solution to counterfactual plots

--- a/student_materials/session7_vector_borne_modelling/session7_vector_borne_modelling.html
+++ b/student_materials/session7_vector_borne_modelling/session7_vector_borne_modelling.html
@@ -877,6 +877,19 @@ Diseases spread by vectors account for almost one-fifth of all infectious diseas
 <p>We firstly start with the expected number of humans (in a totally susceptible population) infected by this mosquito over the duration of their infectious period.</p>
 <p><strong>3.4 Write down this expression using the information you have developed in Parts 2 and 3 (i.e.&nbsp;number of new infections and the duration of the infectious period). We will denote this as <span class="math inline">\(\mathcal{R}_{HM}\)</span>.</strong></p>
 <textarea cols="127" rows="4"></textarea>
+<div class="callout callout-style-default callout-tip callout-titled">
+<div class="callout-header d-flex align-content-center">
+<div class="callout-icon-container">
+<i class="callout-icon"></i>
+</div>
+<div class="callout-title-container flex-fill">
+Focus questions
+</div>
+</div>
+<div class="callout-body-container callout-body">
+<p>What do you notice about the average infectious period of the mosquito? Why is it that? <br> What do you notice about the units of <span class="math inline">\(\mathcal{R}_{HM}\)</span>?</p>
+</div>
+</div>
 <p>
 <br>
 </p>
@@ -1035,11 +1048,11 @@ Note
 <i class="callout-icon"></i>
 </div>
 <div class="callout-title-container flex-fill">
-Focus question
+Focus questions
 </div>
 </div>
 <div class="callout-body-container callout-body">
-<p>What do you notice about the average infectious period of the mosquito? Why is it that?</p>
+<p>What do you notice about the average infectious period of the mosquito? Why is it that? <br> What do you notice about the units of <span class="math inline">\(\mathcal{R}_{HM}\)</span>?</p>
 </div>
 </div>
 <p>
